--- a/package.json
+++ b/package.json
@@ -16,9 +16,17 @@
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "babel-eslint": "^10.1.0",
+    "css-loader": "^0.23.1",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
-    "vue-template-compiler": "^2.6.11"
+    "node-sass": "^4.14.1",
+    "sass-loader": "^10.0.4",
+    "style-loader": "^2.0.0",
+    "vue-loader": "^9.0.0",
+    "vue-router": "^2.1.1",
+    "vue-template-compiler": "^2.6.11",
+    "webpack": "^1.12.2",
+    "webpack-dev-server": "^1.12.0"
   },
   "eslintConfig": {
     "root": true,
