--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "axios": "^0.21.0",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vuetify": "^2.2.11"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -21,11 +22,14 @@
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "node-sass": "^4.14.1",
+    "sass": "^1.19.0",
     "sass-loader": "^10.0.4",
     "style-loader": "^2.0.0",
+    "vue-cli-plugin-vuetify": "~2.0.7",
     "vue-loader": "^9.0.0",
     "vue-router": "^2.1.1",
     "vue-template-compiler": "^2.6.11",
+    "vuetify-loader": "^1.3.0",
     "webpack": "^1.12.2",
     "webpack-dev-server": "^1.12.0"
   },
