--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "axios": "^0.21.0",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
-    "vuetify": "^2.2.11"
+    "vuetify": "^2.2.11",
+    "vuex": "^3.5.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -29,9 +30,7 @@
     "vue-loader": "^9.0.0",
     "vue-router": "^2.1.1",
     "vue-template-compiler": "^2.6.11",
-    "vuetify-loader": "^1.3.0",
-    "webpack": "^1.12.2",
-    "webpack-dev-server": "^1.12.0"
+    "vuetify-loader": "^1.3.0"
   },
   "eslintConfig": {
     "root": true,
